<resources>
    <string name="app_name" translatable="false">Battleship Game</string>
    <string name="welcome">Welcome</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="game">Game</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="user_settings">👤 User Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit">Edit</string>
    <string name="email_sample" translatable="false">sample@email.com</string>
    <string name="name_sample" translatable="false">Nikos</string>
    <string name="surname_sample" translatable="false">Papadopoulos</string>
    <string name="game_settings">⚓ Game Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="sign_out_no_internet">No internet connection - can\'t perform sign out !</string>
    <string name="log_in_no_internet">⚠️  Check your internet connection</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_user_data">User data not found</string>
    <string name="no_user_data_read">Failed to read user data</string>
    <string name="no_user_data_found">User data not found</string>
    <string name="invalid_username_password">Invalid email or password</string>
    <string name="fill_fields">Please fill all the fields</string>
    <string name="failed_registration">Something went wrong with the registration</string>
    <string name="battleship_game">⚔️ Battleship Game</string>
    <string name="battleship_special_instructions">Decide from the list below the opponent you want to play against. Press the \'Battle\' button to request a game. The opponent will be notified and will have to accept the request. Once the request is accepted, the game will start.</string>
    <string name="loading_opponents">Loading available opponents...</string>
    <string name="last_updated">Last updated:</string>
    <string name="refresh_opponents">Refresh</string>
    <string name="ship_1_radio">Destroyer\n(2 cells)</string>
    <string name="ship_2_radio">Submarine\n(3 cells)</string>
    <string name="ship_3_radio">Cruiser\n(4 cells)</string>
    <string name="ship_4_radio">Battleship\n(5 cells)</string>
    <string name="ship_5_radio">Carrier\n(6 cells)</string>
    <string name="ships_random_relocate">Random relocate</string>
    <string name="ships_custom_edit">Custom Edit</string>
    <string name="change_password">Change Password</string>
    <string name="other_device_id">You have signed in with another device. Sign out first!</string>
    <string name="account_settings">⚙️ System Settings</string>
    <string name="contact_opponent">Contact Opponent</string>
    <string name="send">Send</string>
    <string name="type_your_message">💭 Type your message</string>
    <string name="no_available_opponents">No opponents available at the moment. \nPlease try refreshing later.</string>
    <string name="level">🏅 Your Level:</string>
    <string name="points">💎 Your Points:</string>
    <string name="points_to_next_level">✨ Points to next level</string>
    <string name="statistics_descr_text">progress page</string>
    <string name="statistics_progress_bar_explain">You reach the next level when the progress bar is full. Keep playing to earn more points and reach the next level.</string>
    <string name="opponent_fleet">Opponent\'s fleet</string>
    <string name="your_turn">It\'s your turn !</string>
    <string name="opponent_turn">It\'s your opponent turn !</string>
    <string name="alive_ships">Your alive ships</string>
    <string name="ship_destroyer">Destroyer</string>
    <string name="ship_submarine">Submarine</string>
    <string name="ship_cruiser">Cruiser</string>
    <string name="ship_battleship">Battleship</string>
    <string name="ship_carrier">Carrier</string>
    <string name="waiting_for_response">Waiting for response...</string>
    <string name="you_sent_battle_request">You have sent a battle request to</string>
    <string name="cancel">Cancel</string>
    <string name="request_approved">Request has been approved</string>
    <string name="you_playing_against">You are now playing against</string>
    <string name="opponent_data_not_found">Opponent\'s data not found</string>
    <string name="request_declined">Request declined</string>
    <string name="opponent_not_available">Opponent is no longer available</string>
    <string name="battle_request">Battle Request</string>
    <string name="received_battle_request">You have received a battle request from</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="opponent_canceled_request">Opponent has canceled the request</string>
    <string name="total_games">🎳 Total games played:</string>
    <string name="wins">🟢 Wins:</string>
    <string name="losses">🔴 Losses:</string>
    <string name="save">Save</string>
    <string name="custom_edit">Custom Edit</string>
    <string name="save_changes">Save Changes</string>
    <string name="empty_message">Please enter a message</string>
    <string name="no_internet_no_message">No internet connection - You can\'t send the message</string>
    <string name="exit">Exit</string>
    <string name="exit_question">Are you sure you want to exit the game?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="out_of_the_game">Looks like you are out of the game !</string>
    <string name="opponent_won_game">"Opponent has won the game! Maybe you'll be luckier next time. "</string>
    <string name="opponent_left_game">Opponent has left the game</string>
    <string name="opponent_not_available_exit">The opponent isn\'t available. Exit the game.</string>
    <string name="opponent_destroyed_ship">The opponent destroyed a ship</string>
    <string name="opponent_hit_ship">The opponent hit a ship</string>
    <string name="no_ship_attack">No ship attacked !</string>
    <string name="opponent_isnt_available">The opponent isn\'t available.</string>
    <string name="said">said:</string>
    <string name="congratulations_won">CONGRATULATIONS... You are the winner! Keep playing to level up...</string>
    <string name="you_destroyed_ship">You destroyed a ship</string>
    <string name="you_hit_ship">You hit a ship</string>
    <string name="english_language">🇬🇧\nEnglish</string>
    <string name="greek_language">🇬🇷\nGreek</string>
    <string name="italian_language">🇮🇹\nItalian</string>
    <string name="select_display_language">Select Display Language</string>
    <string name="battle">Battle 🧨</string>
    <string name="name_opponent_card">👾 Name:</string>
    <string name="level_opponent_card">🎖️ Level:</string>
    <string name="your_opponent_attack_panel">Your opponent attack panel</string>
    <string name="your_ships_panel">Your ships panel</string>
    <string name="message_no_sent_internet">The opponent hasn\'t read your previous message - Try later...</string>
    <string name="ship_position">Choose ship position</string>
    <string name="ship_to_move">Choose ship type</string>
    <string name="horizontal_ship_position">Horizontal</string>
    <string name="vertical_ship_position">Vertical</string>
    <string name="lost_game">You Lost the Game</string>
    <string name="won_game">You Won the Game</string>
    <string name="opponent_is_responding">Opponent is responding...</string>
    <string name="select_app_theme">Select App Theme</string>
    <string name="default_theme">Default</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="create_account">Create an account</string>
    <string name="game_termination">Game Termination</string>
    <string name="game_termination_descr">You have performed an action that terminated the game.</string>
    <string name="statistics_activity_title">Statistics</string>
    <string name="opponent_message">Opponent\'s Message</string>
    <string name="delete_account_text">Are you sure you want to proceed with permanently deleting your account?</string>
    <string name="home_intro_text">Here are some useful instructions for navigating the application</string>
    <string name="home_game_text">\'Game\': In this section you can find available opponents and challenge them to a naval battle.</string>
    <string name="home_statistics_text">\'Statistics\': From this section you can see useful statistics such as wins/losses, your level and points.</string>
    <string name="home_settings_text">\'Settings\': Through this section you will be able to place your ships and configure your account/application.</string>
    <string name="invalid_ship_position">Invalid position !</string>
    <string name="sign_up_info_email">ℹ️ Your personal email</string>
    <string name="sign_up_info_password">ℹ️ Password 6+ characters long</string>
    <string name="sign_up_info_name">ℹ️ Your first name</string>
    <string name="sign_up_info_surname">ℹ️ Your last name</string>
    <string name="default_theme_description">🔔 (Default) The system default theme is received during the app start-up and not during the runtime.</string>
    <string name="statistics_top_3_winners">⭐ Top 3 in Wins</string>
    <string name="statistics_top_3_losers">🔥 Top 3 in Losses</string>
    <string name="wins_v2">Wins</string>
    <string name="losses_v2">Losses</string>
    <string name="loading_statistics">Loading general statistics...</string>
    <string name="no_internet_connection_settings">No internet conneaction. Can\'t do this action !</string>
    <string name="best_quality_v2">Wins (%)</string>
    <string name="statistics_top_3_best_quality">🏆 Top 3 in Win Rate</string>
    <string name="best_quality">🏆 Your Win Rate:</string>
</resources>