<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".Business_Logic.StartActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="@dimen/text_size_view"
            android:textStyle="bold"
            android:gravity="bottom"
            android:layout_weight="0.5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Battleship Game"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_weight="0.5"/>

        <ImageView
            android:layout_width="@dimen/log_in_image_width"
            android:layout_height="@dimen/log_in_image_height"
            android:src="@drawable/app_icon"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:inputType="text"
            android:textSize="@dimen/edit_text_size"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="@dimen/edit_text_size" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:onClick="sign_in"
            android:textSize="@dimen/text_size_buttons"
            android:layout_marginTop="20dp"/>

        <ProgressBar
            android:id="@+id/start_progress_ring"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:visibility="invisible"
            android:layout_marginBottom="10dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="@dimen/text_size_sub_view"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="0.7"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="@dimen/create_account_prompt"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="0.9"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:onClick="sign_up"
            android:textSize="@dimen/text_size_buttons" />

        <View
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_weight="0.4"/>

    </LinearLayout>

</ScrollView>