<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Business_Logic.GameFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battleship_game"
        android:textStyle="bold"
        android:textSize="@dimen/game_fragment_text_view_title"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/battleship_special_instructions"
        android:textStyle="bold"
        android:textSize="@dimen/game_fragment_text_view_description"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>


    <ScrollView
        android:id="@+id/available_opponents_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/available_opponents_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- This is where the list of available opponents will be added -->

        </LinearLayout>


    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/available_opponents_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:visibility="gone"
        tools:listitem="@layout/opponent_card" />

    <LinearLayout
        android:id="@+id/supporting_elements"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/game_fragment_progress_bar"
            android:layout_height="@dimen/game_fragment_progress_bar"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_opponents"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/game_fragment_inner_text_view"
            android:layout_gravity="center"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_opponents_available"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/game_fragment_image_no_players"
            android:layout_height="@dimen/game_fragment_image_no_players"
            android:src="@drawable/nothing_found"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_available_opponents"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/game_fragment_inner_text_view"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="-2dp"
        android:background="@drawable/refresh_status_background">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_updated"
                android:textSize="@dimen/game_fragment_bottom_information_elements"/>

            <TextView
                android:id="@+id/update_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="- - -"
                android:textSize="@dimen/game_fragment_bottom_information_elements"
                android:textStyle="bold"/>
        </LinearLayout>

        <Button
            android:id="@+id/refresh_opponents_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh_opponents"
            android:textSize="@dimen/game_fragment_bottom_information_elements"
            android:layout_marginTop="@dimen/game_fragment_margins_bottom_button"
            android:layout_marginBottom="@dimen/game_fragment_margins_bottom_button"
            android:enabled="false"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>



</LinearLayout>

