<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="2"
    android:padding="12dp"
    android:layout_margin="5dp"
    android:background="@drawable/opponent_card_background">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_marginBottom="3dp">

        <TextView
            android:id="@+id/opponent_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/opponent_card_text_views"
            android:textStyle="bold"
            android:text="@string/name_opponent_card"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/opponent_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/opponent_card_text_views"
            android:textStyle="bold"
            android:text="Sample Name"
            android:textColor="#000000"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_column="0"
        android:layout_row="1">

        <TextView
            android:id="@+id/opponent_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/opponent_card_text_views"
            android:textStyle="bold"
            android:text="@string/level_opponent_card"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/opponent_level_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/opponent_card_text_views"
            android:text="O"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginStart="5dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/battle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battle"
        android:textSize="@dimen/opponent_card_button"
        android:layout_gravity="center"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_rowSpan="2"/>

</GridLayout>